# ntfy-api

./: Cargo.toml  README.md
examples/: post_json.rs
src/: lib.rs
